# keysounds

./: .gitattributes  Cargo.toml  README.md  TODO
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: showcase.tape
src/: app.rs  hotkey_handler.rs  main.rs
src/app/: audio.rs  config.rs  gui.rs  imp.rs  implementation.rs  input.rs  widget.rs
src/app/audio/: decoder.rs  filter.rs
src/app/audio/filter/: reverb.rs  simple.rs
