[package]
name = "keysounds"
version = "0.3.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
rdev = { version = "0.5", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
cpal = "0.18"
rand = "0.10"
# not specifying symphonia-bundle-mp3 fails to compile
symphonia-bundle-mp3 = "0.5.5"
symphonia = { version = "0.5.5", features = ["all"] }
ringbuf = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[features]
render_call_counter = []
# HotkeyHandler doesn't work when keysounds is ran through vhs
vhs_keybinds = []
