[package]
name = "keysounds"
version = "0.3.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio", "svg"] }
rdev = { version = "0.5", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
cpal = "0.18"
rand = "0.10"
symphonia = { version = "0.6", features = ["all"] }
ringbuf = "0.5"
dirs-next = "2"
env_logger = "0.11"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
